--- a/config/config.yaml
+++ b/config/config.yaml
@@ -11,3 +11,7 @@ base_model:
   custom_train_model_dir: artifacts/custom_train_model
   base_model_path: artifacts/base_model/base_model.h5
   custom_trained_model_path: artifacts/custom_train_model/custom_trained_base_model.h5
+
+model_training:
+  root_dir: artifacts/training
+  model_training_path: artifacts/training/model.h5
