--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,7 +3,7 @@ artifacts_root: artifacts
 data_ingestion:
   root_dir: artifacts/data_ingestion
   source_url: https://www.kaggle.com/datasets/bmadushanirodrigo/fracture-multi-region-x-ray-data
-  local_data_file: artifacts/data_ingestion/data.zip
+  local_data_file: artifacts/data_ingestion/zip_dir
   unzip_dir: artifacts/data_ingestion
 
 base_model:
